--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>If you enjoy coding and powerlifting.</h3>
+      <p class="contact-message">Love powerlifting as much as I do? Let's talk about how fun it is! We can code while we lift!</p>
       <a class="btn" href="mailto:heller_blake@yahoo.com">CONTACT ME</a>
     </div>
   </div>
